--- a/composer.json
+++ b/composer.json
@@ -18,10 +18,14 @@
   },
   "minimum-stability": "dev",
   "require": {
-    "php": ">=5.3.0",
-    "ceus-media/common": ">=0.8.1",
-    "ceus-media/cache": "dev-master"
+    "php": "^5.3 || ^7",
+    "ceus-media/common": "^0.8",
+    "ceus-media/cache": "^0"
   },
+  "require-dev": {
+    "ceus-media/common": "dev-master",
+    "ceus-media/cache": "dev-master"
+  }
   "autoload": {
     "psr-4": {
         "CeusMedia\\Image\\": ["src/"]
