--- a/composer.json
+++ b/composer.json
@@ -7,20 +7,21 @@
     {
       "name": "Christian Würker",
       "email": "christian.wuerker@ceusmedia.de",
-      "homepage": "http://ceusmedia.de",
+      "homepage": "https://ceusmedia.de/",
       "role": "Developer"
     }
   ],
   "support": {
-    "email": "office@ceusmedia.de",
-    "jabber": "ceus-media@jabber.org"
+    "email": "christian.wuerker@ceusmedia.de",
+    "jabber": "cwuerker@ceusmedia.de"
   },
   "require": {
-    "php": "^5.3 || ^7",
-    "ceus-media/common": "^0.8",
+    "php": "^5.3 | ^7 | ^8",
+    "ceus-media/common": "^0.8 | dev-master",
     "ceus-media/cache": "^0"
   },
   "require-dev": {
+    "phpstan/phpstan": "1.5.x-dev"
   },
   "autoload": {
     "psr-4": {
